clusters/wrtk8s/gotify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: gotify
spec:
  type: ClusterIP
  selector:
    app: gotify
  ports:
    - name: http
      port: 80
      targetPort: http
